--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "./lib",
   "scripts": {
     "start": "gulp server",
-    "prepublish": "babel ./src --out-dir ./lib && gulp dist",
+    "postinstall": "babel ./src --out-dir ./lib && gulp dist",
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint src"
